emissão de boletos totalmente funcional
Agora também emitindo documentos com cores
Falta lançar a atualização

--- a/public/resources/pdfsProntos/documento.html
+++ b/public/resources/pdfsProntos/documento.html
@@ -14,6 +14,10 @@
             font: 12pt "Arial";
         }
 
+        body {
+            -webkit-print-color-adjust: exact;
+        }
+
         * {
             box-sizing: border-box;
             -moz-box-sizing: border-box;
