--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1627,8 +1627,24 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Telefone da escola:</label>
-                  <input type="text" onkeypress='$(this).mask("(99) 999999999")' class="form-control" id="telefoneEscola" name="telefoneEscola" aria-describedby="enderecoEscola" placeholder="Digite o telefone da sua escola">
+                  <input type="text" onkeypress='$(this).mask("(99) 999999999")' class="form-control" id="telefoneEscola" name="telefoneEscola" aria-describedby="telefoneEscola" placeholder="Digite o telefone da sua escola">
                   <small id="telefoneHElp" class="form-text text-muted">O telefone da escola aparecerá nos boletins e outros documentos que serão emitidos pelo sistema.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">E-mail da escola:</label>
+                  <input type="text" class="form-control" id="emailEscola" name="emailEscola" aria-describedby="emailEscola" placeholder="Digite o email da sua escola">
+                  <small id="emailHElp" class="form-text text-muted">O email da escola aparecerá nos boletins e outros documentos que serão emitidos pelo sistema.</small>
+                </div>
+                <label class="h6">Cores da Escola</label>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Cor primária:</label>
+                  <input type="color" class="form-control" id="corPrimariaEscola" name="corPrimariaEscola" aria-describedby="enderecoEscola" placeholder="Escolha a cor...">
+                  <small id="emailHElp" class="form-text text-muted">A cor será usada em boletins e documentos.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Cor secundária:</label>
+                  <input type="color" class="form-control" id="corSecundariaEscola" name="corSecundariaEscola" aria-describedby="enderecoEscola" placeholder="Escolha a cor...">
+                  <small id="emailHElp" class="form-text text-muted">A cor será usada em boletins e documentos.</small>
                 </div>
                 <label class="h6">Critérios de Aprovação/Reprovação</label>
                 <div class="row">
