correções alunos e demais areas

--- a/public/aluno/index.html
+++ b/public/aluno/index.html
@@ -164,7 +164,7 @@
     <div class="container-fluid">
       <div class="row">
         <nav class="col-md-2 d-none d-md-block sidebar">
-          <div class="sidebar-sticky">
+          <div class="sidebar-sticky" id="sidebar">
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="list" href="#abaInicio" role="tab" aria-controls="home">
@@ -590,7 +590,6 @@
 
     <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
     <script defer src="../resources/driver/driver.min.js"></script>
-    <script defer src="../js/tour.js"></script>
 
 
     <!-- Graphs 
