troca nome aba emails e bugs identificados

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -539,7 +539,7 @@
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="list" href="#abaEnviarEmails" role="tab" id="btnAbaEnviarEmails" aria-controls="Enviar emails" onclick="abaEmail()">
                     <span data-feather="send"></span>
-                    Enviar e-mails
+                    E-mails
                   </a>
                 </li>
                 <li class="nav-item">
@@ -684,7 +684,7 @@
               <li class="nav-item">
                 <a class="nav-link" data-toggle="list" href="#abaEnviarEmails" role="tab" id="btnAbaEnviarEmails" aria-controls="Enviar emails" onclick="abaEmail()">
                   <span data-feather="send"></span>
-                  Enviar e-mails
+                  E-mails
                 </a>
               </li>
               <li class="nav-item">
@@ -1831,7 +1831,7 @@
                         <!-- tabs -->
                         <ul class="nav nav-tabs border-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#inboxTab" data-toggle="tab">
+                                <a class="nav-link disabled" href="#inboxTab" data-toggle="tab" disabled>
                                     <i data-feather="inbox"></i> Inbox
                                 </a>
                             </li>
