Bug emissão documentos consertado
Bug onde não é possível visualizar e emitir documentos para alunos desativados foi consertado.
Também foi ajustado as funções de transferências de aluno e desativação de alunos de uma turma por meio da secretaria. Ambas funções estão funcionando corretamente.

--- a/public/resources/pdfsProntos/matriculaPdf.html
+++ b/public/resources/pdfsProntos/matriculaPdf.html
@@ -308,6 +308,7 @@ a:visited {text-decoration:none;}
 					var matricula = window.prompt('Digite a matrícula de um aluno para gerar a ficha:')
 				}
 				alunosRef.child(matricula).once('value').then(snapshot => {
+					console.log(snapshot.exists())
 					let dadosAluno = snapshot.val()
 					fichaNome.innerText = dadosAluno.nomeAluno
 					fichaDataNascimento.innerText = dadosAluno.dataNascimentoAluno
