--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1233,7 +1233,6 @@
                               <th>Nome </th>
                               <th>Matrícula  </th>
                               <th>Nota atual </th>
-                              <th>Ações</th>
                             </tr>
                           </thead>
                           <tbody id="listaAlunosTurma">
@@ -1260,7 +1259,7 @@
                   </div>
                 <br><br>
                 
-                <button type="button" class="btn btn-danger" id="btnExcluirTurma" onclick="excluirTurma()">Excluir turma</button>
+                <button type="button" class="btn btn-danger" id="btnExcluirTurma">Excluir turma</button>
                 
                 <hr>
                 <p class="text-muted float-md-right" id="timestampTurmaCadastrada"></p>
