alterações na aba de pré-matrículas
agora é possível deletar uma pré matrícula , além de fazer a atualização da lista de pré matrículas, também foi mudado uma configuração de banco de dados para que no ato do cadastro de alunos e pré matrículas, o sistema salve a data e hora e o usuário que fez a operação para consultas futuras.

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -30,6 +30,16 @@
   </head>
 
   <body>
+    <div class="confirm">
+      <div></div>
+      <div>
+        <div id="confirmMessage"></div>
+        <div>
+          <input id="confirmYes" type="button" value="Sim" />
+          <input id="confirmNo" type="button" value="Não" />
+        </div>
+      </div>
+    </div>
 
     <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" id="modal">
       <div class="modal-dialog modal-lg" role="document">
@@ -1200,7 +1210,7 @@
                     </div>
                   </div> 
                 </div>
-                <div class="container-xl" id="tabelaAlunos">
+                <div class="container-xl" id="tabelaPreMatriculas">
                   <div class="table-responsive">
                     <div class="table-wrapper">
                       <div class="table-title">
@@ -1209,7 +1219,7 @@
                             <h2>Alunos <b>Pré-Matriculados</b></h2>
                           </div>
                           <div class="col-sm-6">
-                            <a class="btn btn-success" onclick="carregaListaDeAlunos(), AstNotif.toast('Lista atualizada')">&nbsp; <span class="feather-24" data-feather="refresh-cw"></span><span>Atualizar lista</span></a>
+                            <a class="btn btn-success" id="atualizaPreMatriculas">&nbsp; <span class="feather-24" data-feather="refresh-cw"></span><span>Atualizar lista</span></a>
                             					
                           </div>
                         </div>
