Cadastro de alunos funcionando
Cadastro de alunos funcionando corretamente. Depois deste commit será criado uma branch para implementar um a nova maneira de cadastrar responsáveis que mudará muito a lógica do sistema.

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -130,7 +130,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="titulo">Consultar responsável por CPF</h5>
+            <h5 class="modal-title" id="titulo">Consultar responsável autorizado</h5>
             <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button> -->
@@ -139,8 +139,8 @@
             <form id="formBuscaResponsavel">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="cpfBuscaResponsavel">Digite o CPF do responsável cadastrado</label>
-                    <input type="text" class="form-control" id="cpfBuscaResponsavel" name="cpfBuscaResponsavel" placeholder="Número de CPF do Responsável">
+                  <label for="nomeBuscaResponsavel">Digite o nome do responsável cadastrado</label>
+                    <input type="text" class="form-control" id="nomeBuscaResponsavel" name="nomeBuscaResponsavel" placeholder="Nome do Responsável">
                 </div>
               </div>
               <button type="submit" class="btn btn-primary btn-block">Procurar</button>
