--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1808,7 +1808,7 @@
               </form>
               <label class="h6">Dados dos Responsáveis</label>
               <br>
-              <button class="btn btn-primary" id="cadastraResponsavel" onclick="cadastrarResponsavel()"><span data-feather="plus"></span>Adicionar responsável</button>
+              <button class="btn btn-primary" id="cadastraResponsavel" onclick="cadastrarResponsavel(false)"><span data-feather="plus"></span>Adicionar responsável</button>
               <br><br>
               <section id="responsaveis">
 
