Lançamento de Notas
Foi adicionado uma chave de liga/desliga nas configurações da escola, na área da secretaria para que possa ser configurado se a escola deseja permitir ou não que o professor faça a própria distribuição de notas.
Caso a escola opte por não permitir, a própria secretaria terá de deixar isso previamente definido no sistema.
Caso a escola permita, ambos professores e secretários poderão alterar a distribuição de pontos na turma.

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -678,7 +678,7 @@
                   </div>
                 </div>-->
                 <br><br>
-                <button type="button" class="btn btn-secondary" id="btnDistribuiNotas" onclick="distribuiNotas()">Distribuir notas</button>
+                <button type="button" class="btn btn-secondary" id="btnDistribuiNotas" style="display: none;" onclick="distribuiNotas()">Distribuir notas</button>
                 <button type="button" class="btn btn-success" id="btnIniciaPeriodo" onclick="iniciaPeriodo()">Iniciar turma</button>
                 <button type="button" class="btn btn-warning" id="btnFechaPeriodo" onclick="fechaPeriodo()">Fechar turma</button>
                 <hr>
