Abertura e fechamento de turmas
Agora a secretaria é a responsável pelo pela abertura e o fechamento das turmas.

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1474,8 +1474,8 @@
                 
                 <button type="button" class="btn btn-danger" id="btnExcluirTurma">Excluir turma</button>
                 <button type="button" class="btn btn-secondary" id="btnDistribuiNotas">Distribuir notas</button>
-                <button type="button" class="btn btn-success" id="btnIniciaPeriodo" onclick="iniciaPeriodo()">Abrir turma</button>
-                <button type="button" class="btn btn-warning" id="btnFechaPeriodo" onclick="fechaPeriodo()">Fechar turma</button>
+                <button type="button" class="btn btn-success" id="btnIniciaPeriodo">Abrir turma</button>
+                <button type="button" class="btn btn-warning" id="btnFechaPeriodo">Fechar turma</button>
                 
                 <hr>
                 <p class="text-muted float-md-right" id="timestampTurmaCadastrada"></p>
