--- a/public/aluno/index.html
+++ b/public/aluno/index.html
@@ -24,6 +24,8 @@
     <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
     <link rel="stylesheet" href="../resources/driver/driver.min.css">
     <link rel="shortcut icon" href="../images/domain.png" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1043735660338382"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
