--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -30,6 +30,9 @@
     <script src="../resources/fullcalendar/lib/locales/pt-br.js"></script>
     <!-- the rrule-to-fullcalendar connector. must go AFTER the rrule lib -->
     <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/rrule@5.5.0/main.global.min.js'></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1043735660338382"
+     crossorigin="anonymous"></script>
     <script>
 
       
