--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="resources/AST-Notif/css/ast-notif.min.css">
   <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
   <link rel="stylesheet" href="resources/driver/driver.min.css">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1043735660338382"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Outros Arquivos necessários para o Bootstrap -->
