--- a/public/login.html
+++ b/public/login.html
@@ -16,6 +16,9 @@
   <link rel="shortcut icon" href="images/domain.png" type="image/x-icon">
 
   <link rel="stylesheet" href="css/loader.css">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1043735660338382"
+     crossorigin="anonymous"></script>
   
   <!--<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />-->
 </head>
