Pagamentos via PIX
Agora os boletos emitidos pelo sistema, virão com um QRCode estático para pagamentos via PIX. Sendo que, a chave PIX deve ser configurada por meio das configurações da escola na secretaria.

--- a/public/resources/pdfsProntos/matriculaPdf.html
+++ b/public/resources/pdfsProntos/matriculaPdf.html
@@ -274,6 +274,7 @@ a:visited {text-decoration:none;}
           to avoid connecting the SDK to running emulators.
         -->
         <script  src="/__/firebase/init.js?useEmulator=true"></script>
+		<script src=""></script>
 		<script>
 			var alunosRef = firebase.database().ref('sistemaEscolar/alunos')
 
