--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -692,6 +692,7 @@
                 <button type="button" class="btn btn-secondary" id="btnDistribuiNotas" style="display: none;" onclick="distribuiNotas()">Distribuir notas</button>
                 <button type="button" class="btn btn-success" id="btnIniciaPeriodo" onclick="iniciaPeriodo()">Iniciar turma</button>
                 <button type="button" class="btn btn-warning" id="btnFechaPeriodo" onclick="fechaPeriodo()">Fechar turma</button>
+                <button type="button" class="btn btn-info" id="btnGeraDiario">Gerar diário de classe</button>
                 <hr>
                 <p class="text-muted justify-content-end" id="timestampTurmaCadastrada"></p>
                 <hr>
