--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1621,6 +1621,7 @@
                 <button type="button" class="btn btn-secondary" id="btnDistribuiNotas">Distribuir notas</button>
                 <button type="button" class="btn btn-success" id="btnIniciaPeriodo">Abrir turma</button>
                 <button type="button" class="btn btn-warning" id="btnFechaPeriodo">Fechar turma</button>
+                <button type="button" class="btn btn-info" id="btnGeraDiario">Gerar diário de classe</button>
                 
                 <hr>
                 
