Correções para uso em BETA learn up

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             <a class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="adm.html">Administração</a>
+            <a class="nav-link" href="adm/">Administração</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="secretaria/">Secretaria</a>
@@ -121,9 +121,12 @@
       <h1 class="display-4">Bem vindo!</h1>
       <p class="lead">Você está na tela inicial do Sistema Escolar.</p>
       <hr class="my-4">
-      <p>Página em desenvolvimento :)</p>
-      <p>Visite a aba da SECRETARIA e faça login para ver as funcionalidades do sistema.</p>
-      <p><b>Caso queria testar as funções do sistema, envie um e-mail para gustavo@resende.app</b></p>
+      <p>Links úteis do sistema escolar</p>
+      <a class="btn btn-block btn-primary" href="aluno/">Portal do Aluno</a>
+      <a class="btn btn-block btn-primary" href="login.html">Login e Cadastro</a>
+      <a class="btn btn-block btn-primary" href="secretaria/">Área da Secretaria</a>
+      <a class="btn btn-block btn-primary" href="professores/">Área dos Professores</a>
+      <a class="btn btn-block btn-primary" href="adm/">Área da Administração</a>
     </div>
   </div>
 
