--- a/public/resources/pdfsProntos/documento.html
+++ b/public/resources/pdfsProntos/documento.html
@@ -147,7 +147,7 @@
                 <table border="1" style="width: 100%; border-collapse: collapse; border-style: dotted; margin-left: auto; margin-right: auto;">
                     <tbody>
                         <tr>
-                            <td style="width: 100%; text-align: center;">Sistema Escolar ProXDigital - comercial@agenciaprojetox.com</td>
+                            <td style="width: 100%; text-align: center;">Sistema Escolar GrupoProX - comercial@grupoprox.com</td>
                         </tr>
                     </tbody>
                 </table>
