--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -695,7 +695,7 @@
         <script defer src="/__/firebase/init.js?useEmulator=true"></script>
         
         <nav class="navbar navbar-light navbar-expand-lg sticky-top bg-light flex-md-nowrap p-0">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="../">Nome da empresa</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="../">Sistema Escolar</a>
         <ul class="navbar-nav">
           <li class="nav-item dropdown active navbar-toggler" class="" type="button" data-toggle="collapse">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
