--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -451,7 +451,7 @@
                         <h2><b>Lista de chamados</b></h2>
                       </div>
                       <div class="col-sm-6">
-                        <!-- <a class="btn btn-primary" data-toggle="modal" id="btnAddChamado">&nbsp; <span class="feather-24" data-feather="plus"></span><span>Adicionar</span></a> -->
+                        <a class="btn btn-primary" data-toggle="modal" id="btnAddChamado">&nbsp; <span class="feather-24" data-feather="refresh-cw"></span><span>Atualizar</span></a>
                                     
                       </div>
                     </div>
