--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -444,7 +444,7 @@
           <div class="modal-body" id="corpoChecklist">
             <div class="container-xl">
               <div class="table-responsive">
-                <div class="table-wrapper">
+                <div class="table-wrapper" style="height: 400px; overflow: scroll;">
                   <div class="table-title">
                     <div class="row">
                       <div class="col-sm-6">
@@ -456,7 +456,7 @@
                       </div>
                     </div>
                   </div>
-                  <table class="table table-striped table-hover" style="max-height: 250px;">
+                  <table class="table table-striped table-hover" >
                     <thead>
                       <tr>
                         <th>
