Conserto de bugs e criação de edição de turmas
- Agora o sistema passa a exigir a escolha de pelo menos um livro para cadastro e edição de turma
- Bug onde hora com horários quebrados davam erro foi corrigido
- Foi adicionado a tela de edição de turmas na aba Turmas. No momento em que se abre uma turma é possível ver o botão de edição daquela turma.

- Ainda falta transferir os dados todos corretamente e também alterar as turmas para os alunos

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1549,7 +1549,16 @@
                     </div>
                   </div>
                 </div>
+                <br>
+                <div class="row">
+                  <div class="container">
+                    <button type="button" class="btn btn-warning" id="btnEditarTurma">Editar informações da turma</button>
+                  </div>
+                  
+                </div>
+                <hr>
                 <div class="container">
+                  
                   <div class="row">
                     <div class="form-group col-auto">
                       <label for="inputAddress">Campo de busca</label>
