Resolução de chamado
Chamado sobre Cadastro de menor de idade, aberto por Camila.
- Agora o sistema passa a não exigir o CPF e o RG no cadastro de qualquer natureza de alunos, caso o mesmo seja menor de idade.
- Agora o sistema passa a exigir o cadastro do nome, e-mail, CPF e RG dos responsáveis do aluno no cadastramento de qualquer natureza.

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1852,11 +1852,11 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputEmail4">RG</label>
-                    <input type="text" class="form-control" id="rgAluno" name="rgAluno" placeholder="RG" required>
+                    <input type="text" class="form-control" id="rgAluno" name="rgAluno" placeholder="RG">
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfAluno" name="cpfAluno" placeholder="CPF" onchange="verificaCPF(this)" required>
+                    <input type="text" class="form-control" id="cpfAluno" name="cpfAluno" placeholder="CPF" onchange="verificaCPF(this)">
                     <small id="cpfHelp" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                 </div>
