--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1812,7 +1812,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">Data de nascimento</label>
-                    <input type="date" class="form-control" id="dataNascimentoAluno" name="dataNascimentoAluno" placeholder="Data" onblur="calculaIdade(this.value)" required>
+                    <input type="date" class="form-control" id="dataNascimentoAluno" name="dataNascimentoAluno" placeholder="Data" onblur="calculaIdade(this.value)">
                     
                   </div>
                   <div class="form-group col-auto">
@@ -1834,7 +1834,7 @@
                   
                   <div class="form-group col-md-5">
                     <label for="inputPassword4">Email</label>
-                    <input type="email" class="form-control" id="emailAluno" name="emailAluno" placeholder="Email" required>
+                    <input type="email" class="form-control" id="emailAluno" name="emailAluno" placeholder="Email">
                   </div>
                 </div>
                 <div class="form-row">
@@ -1846,7 +1846,7 @@
                           <input type="checkbox" aria-label="Mostra e esconde a senha" onclick="this.checked ? (document.getElementById('senhaAluno').type = 'text'):(document.getElementById('senhaAluno').type = 'password')">
                         </div>
                       </div>
-                      <input type="password" class="form-control" id="senhaAluno" name="senhaAluno" placeholder="Senha" required>
+                      <input type="password" class="form-control" id="senhaAluno" name="senhaAluno" placeholder="Senha">
                     </div>
                     <small id="senhaHelp" class="form-text text-muted">A senha precisa ter no mínimo 6 caracteres.</small>
                   </div>
